# v2g

./: .dockerignore  .gitignore  .pytest.ini  .ruff.toml  CLAUDE.md  Dockerfile  README.md  docker-compose.yaml  docker-compose.yml  go.mod  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: cd.yaml  docker-image.yaml  pr.yaml
alloy/: config.alloy
cmd/api-server/: main.go
grafana/provisioning/datasources/: default.yml
internal/adapters/: api.go
nginx/conf.d/: default.conf
prometheus/: prometheus.yaml
scripts/: check_mongo.py  run_workers.sh
src/v2g/: app.py  config.py  logger.py  main.py  models.py  rate_limiter.py  security.py  server.py  tasks.py
src/v2g/core/: config.py  database.py  dependencies.py  models.py  redis.py  repository.py  s3.py  security.py  utils.py
src/v2g/middlewares/: metrics.py
src/v2g/modules/auth/: models.py  routes.py
src/v2g/modules/conversions/: models.py  repositories.py  routes.py
src/v2g/modules/users/: dependencies.py  models.py  repositories.py  (+1 more)
src/v2g/routers/: conversion.py  dependencies.py  login.py  utils.py
terraform/: README.md
terraform/local/: main.tf
terraform/prod/: main.tf  output.tf
tests/: Dockerfile  conftest.py  docker-compose.yml  test_conversion.py  test_login.py  test_user.py  test_websocket.py  utils.py
v2g/: config.py  main.py  models.py  security.py  tasks.py  test_.py
v2g/routers/: conversion.py  dependencies.py  login.py  user.py  utils.py
v2g/tests/: test_conversion.py  test_login.py  test_user.py  utils.py
(+1 files in other folders)
