[project]
name = "v2g"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "celery[redis]>=5.5.3",
    "fastapi[standard]>=0.116.1",
    "httpx>=0.28.1",
    "passlib[bcrypt]>=1.7.4",
    "pydantic-settings>=2.10.1",
    "pyjwt>=2.10.1",
    "pymongo>=4.13.2",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
]
